# escribito

./: .gitignore  LICENSE  README.md  app.py  app_api.py  pyproject.toml
config/: style.css
config/languages/: en.toml  fr.toml
